# move_gz_object

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
move_gz_object/: move_gazebo_object.py
scripts/: move_gazebo_object.py  randomized_object_pose.py
srv/: ModifyObjectPose.srv
